2005-09-06  Kalpit Desai	<kvdesai@cs.unc.edu>
	* atcore.m: Fixed a bug in 'reciprocal' mode fitting. Also deleted the time-offset removal in this file. It should be taken care of by load_agnostic_tracking file.
	* atanalysis.fig: Removed the 'select all' button.

2005-09-06  Kalpit Desai	<kvdesai@cs.unc.edu>
	* atanalysis.m: Now draws markers for the timings when perturbations were injected.
2005-09-02  Kalpit Desai	<kvdesai@cs.unc.edu>
	* atcore.m: Added the core script that does actual analsis of the agnostic tracking data set. This script can be called from matlab prompt. It is also called from atanalysis GUI.
	* Load agnostic tracking: Now compatible with the recent versions of Laser Tracker where Jacobian is in absolute space and not in derivative space. Also parses the noise-messages for each Jacobian.
	* atanalysis.fig, atanalysis.m: GUI version of the analysis program. Call upon appropriate scripts and displays results.
	* modifiedBP.m: Slight change in comments. Still not compatible with the recent version of Laser Tracker.

2005-07-13  Kalpit Desai	<kvdesai@cs.unc.edu>
	* modifiedBP.m: Fixed the bug where it was looking for Active Jacobian for calculation Active-Position-Errors during blips.
2005-07-12  Kalpit Desai	<kvdesai@cs.unc.edu>

	* Initial version for ChangeLog in Agnostic directory
	* atanalysis.m, atanalysis.fig: 
	- A GUI for analysing agnostic tracking data. Initial version.
	* load_agnostic_tracking.m:
	- A script that parses the tracking data from AgnosticTracking point of view. Compatible to laser tracker versions 03.02 to 04.00 and may be later.
	* modifiedBP.m:
	- A script to compute 'modified' bead positions. 'modified' because the positionErrors during the blips (the period when noise was injected) is computed by using the post-blip jacobian and not the pre-blip jacobian
	* quadTOpos.m: